[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ui/gui/slot/Slot.gd" type="Script" id=2]

[node name="Slot" type="Button"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"
align = 2
valign = 2

[node name="CooldownOverlay" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 20.0
texture_progress = ExtResource( 1 )
fill_mode = 4
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="." to="." method="_on_Slot_pressed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
